samples/_failures_safe/1761071976_61a843_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f4969f4.c: In function ‘main’:
./samples/SAFE/__tmp_8f4969f4.c:154:29: error: expected ‘)’ at end of input
  154 |     graph_add_edge(&graph, 4
      |                   ~         ^
      |                             )
./samples/SAFE/__tmp_8f4969f4.c:154:5: error: too few arguments to function ‘graph_add_edge’
  154 |     graph_add_edge(&graph, 4
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8f4969f4.c:90:6: note: declared here
   90 | void graph_add_edge(Graph* graph, int from, int to, int weight) {
      |      ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8f4969f4.c:154:5: error: expected declaration or statement at end of input
  154 |     graph_add_edge(&graph, 4
      |     ^~~~~~~~~~~~~~
